# files-store

./: .editorconfig  .env_exemple  .gitignore  Cargo.toml  README.md  demo-docker-compose.yml  docker-compose.yml
.github/workflows/: docker-publish.yml  server-checking.yml  web-checking.yml
files-store-domain/: Cargo.toml
files-store-domain/src/: create_fs_node.rs  create_fs_node_directory.rs  fs_node.rs  fs_node_metadata.rs  fs_node_type.rs  fs_nodes_respose.rs  lib.rs
files-store-server/: Cargo.toml
files-store-server/migrations/2019-08-06-072226_files/: down.sql  up.sql
files-store-server/src/: config.rs  errors.rs  main.rs  thumbnail_job.rs  users_routes.rs
files-store-server/src/domain/: create_stored_fs_node.rs  fs_node.rs  fs_node_metadata.rs  fs_nodes_respose.rs  mod.rs  stored_fs_node.rs
files-store-server/src/jobs/: bin_cleaner_job.rs  mod.rs  thumbnail_job.rs
files-store-server/src/repositories/: fs_node.rs  fs_node_store.rs  fs_nodes_repository.rs  mod.rs  repository_erros.rs  stored_fs_node.rs
files-store-server/src/routes/: bin_cleanup.rs  create_directory.rs  download.rs  get_files.rs  get_thumbnail.rs  mod.rs  move_fs_node.rs  move_fs_node_to_bin.rs  upload.rs
files-store-server/src/storages/: local_storage.rs  storage.rs
files-store-server/src/utils/: sanitize_path.rs
files-store-sync/: Cargo.toml
files-store-sync/src/: api.rs  cli.rs  errors.rs  main.rs
files-store-web/: .gitignore  README.md  package-lock.json  package.json  rollup.config.js  snowpack.config.js  tsconfig.json
files-store-web/public/: global.css  index.html
files-store-web/src/: App.svelte  App.test.ts  FileStoreApi.ts  FsNode.ts  Intl.svelte  index.ts  utils.ts
files-store-web/src/components/: Breadcrumb.svelte  Button.svelte  DirectoryEdit.svelte  DirectoryNode.svelte  FileNode.svelte  FlyingPanel.svelte  FsNode.svelte  FsNodeSelection.svelte  FsNodes.svelte  Header.svelte  IconButton.svelte  Modal.svelte  MoveFsNodeModal.svelte  MultiFsNodeSelected.svelte  NavigatorBreadcrumb.svelte  SingleFsNodeSelected.svelte  Uploader.svelte
files-store-web/src/icons/: CloseIcon.svelte  DeleteIcon.svelte  DirectoryIcon.svelte  FileIcon.svelte  HomeIcon.svelte  LoaderIcon.svelte
files-store-web/src/models/: ChangePasswordPayload.ts  Pagination.ts  PasswordAuthResponse.ts  PasswordCredentialsPayload.ts  UserUpdatePayload.ts
files-store-web/src/screens/: Bin.svelte  Files.svelte  Login.svelte
files-store-web/src/services/: Api.ts  ApiError.ts  ApiService.ts  ApiStorage.ts  AuthService.ts  FsNodesService.ts
files-store-web/src/stores/: store.ts
files-store-web/static/: index.html
infra/docker/: Dockerfile
migrations/2019-08-06-072226_files/: down.sql  up.sql
src/: auth.rs  config.rs  download.rs  errors.rs  files_repository.rs  main.rs  sanitize_path.rs  storage.rs  upload.rs  uploaded_file.rs
src/repositories/: fs_node.rs  fs_nodes_repository.rs  mod.rs
src/routes/: create_directory.rs  delete_fs_node.rs  download.rs  get_files.rs  mod.rs  upload.rs
src/storages/: local_storage.rs  mod.rs  storage.rs
users/: Cargo.toml
users/src/: auth.rs  errors.rs  jwt.rs  lib.rs  password.rs  users_repository.rs  users_service.rs
users/src/domain/: access_token.rs  change_password.rs  mod.rs  password_credentials.rs  signup.rs  user.rs  user_update.rs  users_store.rs
