[package]
name = "files-store-domain"
version = "0.1.0"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = { version = "0.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.11", features = ["derive"] }
