[package]
name = "files-store-server"
version = "0.1.0"
authors = ["Wadjetz <egor@berezify.fr>"]
edition = "2018"

[dependencies]
# Data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
mime = "0.3"
bytes = "0.5"

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tools
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "0.2", features = ["io-util", "fs", "stream"] }
jemallocator = "0.3"
async-std = "1.6"
sanitize-filename = "0.3"
itertools = "0.9"

# Web
actix-web = "3.1"
actix-multipart = "0.3"
actix-files = "0.4"
actix-cors = "0.5"

# Database
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = "1.4"

# Crypto
blake2 = "0.9"

# Environement
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
