[package]
name = "files-store-server"
version = "0.1.0"
authors = ["Wadjetz <egor@berezify.fr>"]
edition = "2018"
default-run = "files-store-server"

[[bin]]
name = "files-store-server"
path = "src/main.rs"

[dependencies]
users = { path = "../users" }
files-store-domain = { path = "../files-store-domain" }
# Data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
mime = "0.3"
bytes = "0.6"
strum = { version = "0.19", features = ["derive"] }
validator = { version = "0.11", features = ["derive"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tools
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "0.2", features = ["io-util", "fs", "stream"] }
jemallocator = "0.3"
async-std = "1.6"
sanitize-filename = "0.3"
itertools = "0.9"
image = "0.23"

# Web
actix = "0.10"
actix-web = "3.2"
actix-multipart = "0.3"
actix-files = "0.4"
actix-cors = "0.5"

# Database
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
diesel = { version = "1.4", features = ["postgres"] }
diesel_migrations = "1.4"

# Crypto
blake2 = "0.9"

# Environement
dotenv = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
