[package]
name = "files-store-sync"
version = "0.1.0"
authors = ["Egor <egor@berezify.fr>"]
edition = "2018"

[[bin]]
name = "files-store-sync"
path = "src/main.rs"

[dependencies]
files-store-domain = { path = "../files-store-domain" }

thiserror = "1.0"
async-std = { version = "1.7", features = ["tokio02"] }
structopt = "0.3"
reqwest = { version = "0.10", features = ["json"] }
